--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,40 +10,48 @@
       <view class="weui-cell__ft">已登录</view>
     </block>
   </view>
+  <view class="weui-cells__title">数据统计</view>
+  <view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell">
+        <view class="weui-cell__bd">总里程：{{allCount.alldis}}km</view>
+        <view class="weui-cell__ft" style="color: #000;" >总耗时：{{allCount.alldesc}}</view>
+    </view>
+  </view>
   <view class="weui-cells__title">目的地列表(长按删除目的地)</view>
   <view class="weui-cells weui-cells_after-title">
-  <block wx:if="{{placeList.length}}>0">
-    <block wx:for="{{placeList}}" wx:for-item="place" wx:key="{{index}}">
-      <view class="weui-cell" bindlongpress="delPlace" id="{{index}}_place"bindtap="moreInfo">
-        <view class="weui-cell__bd" style="font-size:small;">{{place.title}}</view>
-        <view class="weui-cell__ft" style="font-size:small;">耗时：{{place.duration}}min 距离：{{place.distance}}km</view>
-      </view>
-      <view class='weui-cells__tips' hidden="{{place.hidden}}">
-        <view class="weui-cell__bd" style="font-size:small;">{{place.address}}</view>
-        <view class="weui-cell__ft" style="font-size:small;">{{place.city}} {{place.district}}</view>
-      </view>
-       
+    <block wx:if="{{placeList.length>0}}">
+      <block wx:for="{{placeList}}" wx:for-item="place" wx:key="{{index}}">
+        <view class="weui-cell" bindlongpress="delPlace" id="{{index}}_place" bindtap="moreInfo">
+          <view class="weui-cell__bd">{{place.name}}</view>
+          <view class="weui-cell__ft" style="font-size:small;">{{place.city}} {{place.district}}</view>
+        </view>
+        <block wx:if="{{index>0}}">
+        <view class="weui-cell-msg" hidden="{{place.hidden}}">
+          <view class='weui-cell-msg__bd'>{{index}}.路况：{{place.taxi.traffic_condition}}</view>
+          <view class='weui-cell-msg__ft'>耗时：{{place.taxi.desc}} 距离：{{place.taxi.distance}}km</view>
+        </view>
+        </block>
+      </block>
     </block>
-  </block>
   </view>
   <view class="weui-cells__title">地点查询</view>
   <view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">
-      <input class="weui-input" bindinput="bindKeyInput" placeholder="请输入地点名称" value="{{inputValue}}" />
-      
+    <view class="weui-cell">
+      <view class="weui-cell__bd">
+        <input class="weui-input" bindinput="bindKeyInput" placeholder="请输入地点名称" value="{{inputValue}}" />
+
+      </view>
+      <view class="weui-cell__ft">
+        <button class="weui-btn" type="Normal" size='mini' bindtap="getMapData">确定</button>
+      </view>
     </view>
-    <view class="weui-cell__ft">
-      <button class="weui-btn" type="Normal" size='mini' bindtap="getMapData">确定</button>
-    </view>
-  </view>
   </view>
   <block wx:if="{{hasSuggest}}">
     <scroll-view scroll-y style="height: 200px;">
       <block wx:for="{{suggestList}}" wx:for-item="suggest" wx:key="{{suggest.id}}">
         <view class="weui-cell" id="{{index}}_suggest" bindtap="suggestBindTap">
           <label hidden='true'>{{suggest}}</label>
-          <view class="weui-cell__bd" style="font-size:small;">{{suggest.title}}</view>
+          <view class="weui-cell__bd" style="font-size:small;">{{suggest.name}}</view>
           <view class="weui-cell__ft" style="font-size:small;">{{suggest.city}}</view>
         </view>
       </block>
