--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,11 @@
 <!--index.wxml-->
 <view class="page">
-<!--
+  <!--
   <button class='weui-btn' bindtap='closeAll' style='background-color: #E1FFFF; width:80%;'>关闭全部导航信息</button>
   -->
-  <view class="weui-cells__title">数据统计</view>
+  <view class="weui-cells__title">
+    <text class='iconfont icon-information'></text> 数据统计
+  </view>
   <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell">
       <view class="weui-cell__bd">总里程：{{allCount.alldis}}km</view>
@@ -11,37 +13,40 @@
     </view>
   </view>
   <view class="weui-cells__title">
-  <icon type='search'color="blue"></icon>
-  目的地列表(长按删除目的地)</view>
+    <text class='iconfont icon-map'></text> 目的地列表(长按删除目的地)
+  </view>
   <view class="weui-cells weui-cells_after-title">
     <block wx:if="{{placeList.length>0}}">
       <block wx:for="{{placeList}}" wx:for-item="place" wx:key="{{index}}">
         <block wx:if="{{index > 0}}">
           <block wx:for="{{place.taxi.steps}}" wx:for-item="step" wx:for-index="idx" wx:key="{{idx}}">
-            <view class="weui-cell-instr" id="{{index}}_{{idx}}_moreInfo" hidden="{{place.hidden}}" bindtap="moreInfo" >
+            <view class="weui-cell-instr" id="{{index}}_{{idx}}_moreInfo" hidden="{{place.hidden}}" bindtap="moreInfo">
               <view class='weui-cell-instr__bd'>{{step.instructions}}</view>
-              <view class='weui-cell-instr__ft'>距离：{{step.distance}}m</view>
+              <view class='weui-cell-instr__ft'>距离：{{step.distance}}</view>
             </view>
           </block>
         </block>
-        <view class="weui-cell" bindlongpress="delPlace" id="{{index}}_place" bindtap="moreInfo" >
+        <view class="weui-cell" bindlongpress="delPlace" id="{{index}}_place" bindtap="moreInfo">
           <view class="weui-cell__bd">{{place.name}}</view>
           <view class="weui-cell__ft" style="font-size:small;">{{place.city}} {{place.district}}</view>
         </view>
         <block wx:if="{{index>0}}">
           <view class="weui-cell-msg">
-            <view class='weui-cell-msg__bd'><icon type='info'color="{{place.taxi.traffic_color}}"/> {{place.taxi.traffic_condition}}</view>
+            <view class='weui-cell-msg__bd'>
+              <icon type='info' color="{{place.taxi.traffic_color}}" /> {{place.taxi.traffic_condition}}</view>
             <view class='weui-cell-msg__ft'>耗时：{{place.taxi.desc}} 距离：{{place.taxi.distance}}km</view>
           </view>
         </block>
       </block>
     </block>
   </view>
-  <view class="weui-cells__title">地点查询</view>
+  <view class="weui-cells__title">
+    <text class='iconfont icon-search'></text> 地点查询
+  </view>
   <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell">
       <view class="weui-cell__bd">
-        <input class="weui-input" bindinput="bindKeyInput2" placeholder="请输入地点名称" value="{{inputValue}}" />
+        <input class="weui-input" bindinput="bindKeyInput" placeholder="请输入地点名称" value="{{inputValue}}" />
 
       </view>
       <view class="weui-cell__ft">
