--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -66,3 +66,22 @@
 .weui-cell-instr__ft {
   text-align: right;
 }
+
+
+.weui-cells__title {
+  display: flex;
+  flex-direction: row;
+  margin-top: 0.77em;
+  margin-bottom: 0.3em;
+  padding-left: 15px;
+  color: #999;
+  font-size: 14px;
+}
+
+.title2{
+  margin-left: 30px;
+  text-align: left;
+  box-shadow: 2px 2px 1px #888888;
+  border-radius: 10%
+}
+  
