--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,7 +16,7 @@
     <view class="title1">
       <text class='iconfont icon-map'></text>目的地列表(长按删除目的地)
     </view>
-    <view class="title2" style="{{canPress}}" bindtap="refreshTraffic">
+    <view class="title2" style="{{canPress}}" hidden='true' bindtap="refreshTraffic">
       <text class='iconfont icon-refresh'></text>刷新路况
     </view>
     <view class="title1">{{second}}</view>
@@ -25,7 +25,7 @@
     <block wx:if="{{placeList.length>0}}">
       <block wx:for="{{placeList}}" wx:for-item="place" wx:key="{{index}}">
         <block wx:if="{{index > 0}}">
-          <map id="map" hidden="{{place.hidden}}" latitude="{{place.taxi.originLocation.lat}}" longitude="{{place.taxi.originLocation.lng}}" polyline="{{place.taxi.polyLine}}" style="width: 100%; height: 350px;" scale='10'></map> 
+          <map id="{{index}}_map" hidden="{{place.hidden}}"  bindtap="moreInfo" polyline="{{place.taxi.polyline}}" style="width: 100%; height: 350px;" scale='10'></map> 
           <!-- 
           <block wx:for="{{place.taxi.steps}}" wx:for-item="step" wx:for-index="idx" wx:key="{{idx}}">
             <view class="weui-cell-instr" id="{{index}}_{{idx}}_moreInfo" hidden="{{place.hidden}}" bindtap="moreInfo">
@@ -36,13 +36,16 @@
             -->
         </block>
         <view class="weui-cell" bindlongpress="delPlace" id="{{index}}_place" bindtap="moreInfo">
-          <view class="weui-cell__bd">{{place.name}}</view>
+          <view class="weui-cell__bd">{{place.title}}</view>
           <view class="weui-cell__ft" style="font-size:small;">{{place.city}} {{place.district}}</view>
         </view>
         <block wx:if="{{index>0}}">
           <view class="weui-cell-msg">
             <view class='weui-cell-msg__bd'>
-              <icon type='info' color="{{place.taxi.traffic_color}}" /> {{place.taxi.traffic_condition}}</view>
+                  <!-- 
+              <icon type='info' color="{{place.taxi.traffic_color}}" /> {{place.taxi.traffic_condition}}
+              -->
+            </view>
             <view class='weui-cell-msg__ft'>耗时：{{place.taxi.desc}} 距离：{{place.taxi.distance}}km</view>
           </view>
         </block>
@@ -70,7 +73,7 @@
       <block wx:for="{{suggestList}}" wx:for-item="suggest" wx:key="{{suggest.id}}">
         <view class="weui-cell" id="{{index}}_suggest" bindtap="suggestBindTap">
           <label hidden='true'>{{suggest}}</label>
-          <view class="weui-cell__bd" style="font-size:small;">{{suggest.name}}</view>
+          <view class="weui-cell__bd" style="font-size:small;">{{suggest.title}}</view>
           <view class="weui-cell__ft" style="font-size:small;">{{suggest.city}}</view>
         </view>
       </block>
